<resources>
    <string name="app_name" translatable="false">Phone to mouse</string>

    <!--preferences string keys-->
    <string name="prefs_file" translatable="false">com.sanikshomemade.phonetomouse.PREFS_FILE</string>
    <string name="last_paired_mac" translatable="false">last_paired_mac</string>
    <string name="last_paired_device_name" translatable="false">last_paired_name</string>
    <string name="theme_option" translatable="false">theme</string>
    <string name="preferred_cursor_scale" translatable="false">pref_cr_scale</string>
    <string name="preferred_language" translatable="false">pref_lang</string>
    <string name="preferred_bt_reconnect" translatable="false">pref_reconn</string>
    <string name="setting_connection_sound" translatable="false">pref_sound1</string>
    <string name="setting_longpress_sound" translatable="false">pref_sound2</string>

    <!--EntryActivity-->
    <string name="entry_device_name_placeholder">(none configured)</string>
    <string name="entry_target">Target device</string>
    <string name="entry_config_blt">Configure Bluetooth</string>
    <string name="entry_screen">Touchscreen</string>
    <string name="entry_info">Info</string>
    <string name="entry_settings">Settings</string>

    <!--BluetoothConfigActivity-->
    <string name="bt_just_visible">Just visible</string>
    <string name="bt_paired">Paired</string>
    <string name="bt_discover">Discover visible</string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_stop">Stop</string>
    <string name="bt_show">Show paired</string>
    <string name="bt_action_text">Find and select a device to connect to</string>

    <!--Settings-->
    <string name="cursor_size_point">Cursor size</string>
    <string name="reconnect_point">Auto reconnect when Bluetooth returns after it was turned off during an active
        connection
    </string>
    <string name="lang_point">Language</string>
    <string name="theme_point">Dark theme:</string>
    <string name="sound1_option_point">Play sound on connect/disconnect</string>
    <string name="sound2_option_point">Vibrate on mouse up/down input</string>

    <!--Info-->
    <string name="info_action_text">How to use app</string>
    <string-array name="info_categories">
        <item>How to connect</item>
        <item>How to do mouse gestures</item>
        <item>How to disconnect</item>
    </string-array>
    <string-array name="gestures_explain">
        <item>Select used mouse button: toggle the switch with the arrow, selected button will be highlighted, by default it is left</item>
        <item>Move the cursor: move finger on screen</item>
        <item>Click: single tap</item>
        <item>Double click: double tap</item>
        <item>Mouse down: finger down on screen</item>
        <item>Mouse up: lift finger up from screen</item>
        <item>Wheel scroll up: press volume up button</item>
        <item>Wheel scroll down: press volume down button</item>
    </string-array>
    <string-array name="disconnect_options">
        <item>a) in the phone app, press Pause button</item>
        <item>b) in the phone app, press Home button</item>
        <item>c) exit the phone app</item>
        <item>d) close the phone app</item>
        <item>e) turn the phone off</item>
        <item>f) in the desktop app, click Disconnect</item>
        <item>g) close the desktop app</item>
    </string-array>


    <!--Touchscreen-->
    <string name="screen_you_can_connect">Press play button to start connection</string>
    <string name="screen_no_blt">Bluetooth is disabled</string>
    <string name="screen_up">Up</string>
    <string name="screen_down">Down</string>
    <string name="screen_left">Left</string>
    <string name="screen_right">Right</string>
    <string name="screen_no_conn_toast_text">Target device is not waiting for connection at the moment</string>

    <string-array name="languages">
        <item>EN</item>
        <item>RU</item>
        <item>UK</item>
        <item>DE</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>