<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.BluetoothConfigActivity">

    <androidx.constraintlayout.widget.Guideline android:id="@+id/center_guide"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:orientation="vertical"
                                                app:layout_constraintGuide_percent="0.5"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintBottom_toTopOf="@id/list_visible"
              app:layout_constraintEnd_toEndOf="@id/list_visible"
              app:layout_constraintStart_toStartOf="@id/list_visible"
              android:text="@string/bt_just_visible"/>

    <ListView android:id="@+id/list_visible"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@drawable/device_name_border"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constrainedWidth="true"
              app:layout_constraintEnd_toStartOf="@id/center_guide"
              app:layout_constraintWidth_percent="@dimen/listview_width_ratio"
              app:layout_constraintHeight_percent="@dimen/listview_height_ratio"
              app:layout_constrainedHeight="true"
              android:scrollbars="horizontal"/>


    <Button android:id="@+id/discovery_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_discover"
            app:layout_constraintEnd_toStartOf="@id/center_guide"
            app:layout_constraintTop_toBottomOf="@id/list_visible" app:layout_constraintHorizontal_bias="0.0"/>

    <ProgressBar android:id="@+id/progress_discovery"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:visibility="invisible"
                 style="?android:progressBarStyleHorizontal"
                 app:layout_constrainedWidth="true"
                 app:layout_constraintTop_toTopOf="@id/discovery_btn"
                 app:layout_constraintBottom_toBottomOf="@id/discovery_btn"
                 app:layout_constraintStart_toStartOf="@id/discovery_btn"
                 app:layout_constraintEnd_toEndOf="@id/discovery_btn"

                 android:min="0"
                 android:max="@integer/progress_seconds_max"/>

    <Button android:id="@+id/cancel_disc_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_cancel"
            android:enabled="false"
            app:layout_constraintEnd_toStartOf="@id/stop_disc_btn"
            app:layout_constraintTop_toBottomOf="@id/discovery_btn"/>
    <Button android:id="@+id/stop_disc_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_stop"
            android:enabled="false"
            app:layout_constraintEnd_toStartOf="@id/center_guide"

            app:layout_constraintTop_toBottomOf="@id/discovery_btn"/>

    <TextView android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              app:layout_constraintBottom_toTopOf="@id/list_paired"
              app:layout_constraintEnd_toEndOf="@id/list_paired"
              app:layout_constraintStart_toStartOf="@id/list_paired"
              android:text="@string/bt_paired"/>

        <ListView android:id="@+id/list_paired"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:scrollbars="horizontal"
                  android:background="@drawable/device_name_border"
                  app:layout_constraintTop_toTopOf="parent"
                  app:layout_constraintBottom_toBottomOf="parent"
                  app:layout_constraintStart_toEndOf="@id/center_guide"
                  app:layout_constraintWidth_percent="@dimen/listview_width_ratio"
                  app:layout_constrainedWidth="true"
                  app:layout_constraintHeight_percent="@dimen/listview_height_ratio"
                  app:layout_constrainedHeight="true"/>

    <Button android:id="@+id/paired_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bt_show"
            app:layout_constraintStart_toStartOf="@id/center_guide"
            app:layout_constraintEnd_toEndOf="@id/list_paired"
            app:layout_constraintTop_toBottomOf="@id/list_paired"
            app:layout_constraintBottom_toBottomOf="@id/cancel_disc_btn"/>
</androidx.constraintlayout.widget.ConstraintLayout>